src/objects/npe5__Affiliation__c.object
<CustomObject>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name(s)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclosure_Abbreviation__c</fullName>
        <formula>LEFT(IF( INCLUDES(Relationship_Type__c, &apos;Advisor/Board Member&apos;), &apos;A,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Consultant/Independent Contractor&apos;), &apos;C,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Full-time/part-time Employee&apos;), &apos;E,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Grants/Research Support Recipient&apos;), &apos;G,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Honorarium Recipient&apos;), &apos;H,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Stock Shareholder (Self Managed)&apos;), &apos;S,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Speakers Bureau&apos;), &apos;SB,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Other (Please Specify)&apos;), &apos;O,&apos;, &apos;&apos;),

LEN(IF( INCLUDES(Relationship_Type__c, &apos;Advisor/Board member&apos;), &apos;A,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Consultant/Independent Contractor&apos;), &apos;C,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Full-time/part-time Employee&apos;), &apos;E,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Grants/Research Support Recipient&apos;), &apos;G,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Honorarium Recipient&apos;), &apos;H,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Stock Shareholder (Self Managed)&apos;), &apos;S,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Speakers Bureau&apos;), &apos;SB,&apos;, &apos;&apos;)
&amp; IF( INCLUDES(Relationship_Type__c, &apos;Other (Please Specify)&apos;), &apos;O,&apos;, &apos;&apos;)) - 1)</formula>
        <label>Relationship Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disclosure_End_Date__c</fullName>
        <formula>Date(Year(Disclosure_Start_Date__c) + 1,Month(Disclosure_Start_Date__c), Day(Disclosure_Start_Date__c))</formula>
        <label>Disclosure Date (End)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disclosure_Start_Date__c</fullName>
        <label>Disclosure Date (Start)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Name</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Disclosures</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advisor/Board Member</fullName>
                </value>
                <value>
                    <fullName>Consultant/Independent Contractor</fullName>
                </value>
                <value>
                    <fullName>Full-time/part-time Employee</fullName>
                </value>
                <value>
                    <fullName>Honorarium Recipient</fullName>
                </value>
                <value>
                    <fullName>Stock Shareholder (Self Managed)</fullName>
                    <label>Stock Shareholder (Self-Managed)</label>
                </value>
                <value>
                    <fullName>Speakers Bureau</fullName>
                </value>
                <value>
                    <fullName>Other (Please Specify)</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Grants/Research Support Recipient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationships_to_Disclose__c</fullName>
        <label>Relationships to Disclose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c4g_Contact_Name_Type_Channel__c</fullName>
        <formula>npe5__Contact__r.FirstName &amp; &quot; &quot; &amp;  npe5__Contact__r.LastName &amp;&quot;-&quot;&amp; TEXT(cfg_Type__c) &amp; &quot;-&quot; &amp; TEXT(cfg_Channel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name, Type &amp; Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advocacy</fullName>
                </value>
                <value>
                    <fullName>In-kind gifts</fullName>
                </value>
                <value>
                    <fullName>Grants</fullName>
                </value>
                <value>
                    <fullName>Event sponsorships</fullName>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Brand Commercial</fullName>
                </value>
                <value>
                    <fullName>Medical Affairs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Trusts</fullName>
                </value>
                <value>
                    <fullName>Board</fullName>
                </value>
                <value>
                    <fullName>Committee</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe5__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organization Affiliations</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npe5__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npe5__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe5__Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliated Contacts</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npe5__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the Affiliation&apos;s Organization will be stored on the Contact record.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe5__Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe5__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe5__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Related_Opportunity_Contact_Role__c</fullName>
        <description>When you create an Opportunity for the Organization in this Affiliation, NPSP assigns this Opportunity Contact Role to the affiliated Contact.</description>
        <inlineHelpText>When you create an Opportunity for the Organization in this Affiliation, NPSP assigns this Opportunity Contact Role to the affiliated Contact.</inlineHelpText>
        <label>Related Opportunity Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Soft Credit</fullName>
                </value>
                <value>
                    <fullName>Solicitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Affiliation</label>
    <listViews>
        <fullName>Disclosures</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>npe5__Contact__c</columns>
        <columns>npe5__EndDate__c</columns>
        <columns>Relationships_to_Disclose__c</columns>
        <columns>Disclosure_Abbreviation__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>npe5__Affiliation__c.Disclosure</value>
        </filters>
        <filters>
            <field>Event__c</field>
            <operation>contains</operation>
            <value>2019 Bladder</value>
        </filters>
        <label>Disclosures</label>
    </listViews>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <recordTypes>
        <fullName>Disclosure</fullName>
        <active>false</active>
        <label>Disclosure</label>
    </recordTypes>
    <recordTypes>
        <fullName>c4g_Foundation_Affiliations</fullName>
        <active>true</active>
        <description>For use by AACR Foundation staff</description>
        <label>Affiliations</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_Relationships_to_Disclose</fullName>
        <active>true</active>
        <description>If &quot;Relationships to Disclose&quot; = No, all other fields should be blank.</description>
        <errorConditionFormula>AND( RecordType.Name = &quot;Disclosure&quot;
,TEXT(Relationships_to_Disclose__c)=&quot;No&quot;
,NOT(ISBLANK(Company_Name__c))
,NOT(ISBLANK(Relationship_Type__c))
)</errorConditionFormula>
        <errorMessage>If there are NO relationships to disclose, there should not be anything entered in Relationship Types or Company Name(s).</errorMessage>
    </validationRules>
</CustomObject>